added java options to handle InaccessibleObjectException based on the latest java changes